<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.fragmentdemo.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_dataFragment"
            app:destination="@id/dataFragment" />
    </fragment>
    <fragment
        android:id="@+id/dataFragment"
        android:name="com.example.fragmentdemo.fragments.DataFragment"
        android:label="@string/forms"
        tools:layout="@layout/fragment_data">
        <action
            android:id="@+id/action_dataFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <argument
            android:name="start"
            app:argType="string" />
        <action
            android:id="@+id/action_dataFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.fragmentdemo.fragments.DetailsFragment"
        android:label="@string/submission"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/action_detailsFragment_to_dataFragment"
            app:destination="@id/dataFragment" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="stack"
            app:argType="string" />
        <argument
            android:name="goals"
            app:argType="string" />
    </fragment>
</navigation>